// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a query=forward-connect-by-id.graphql 1`] = `
{
  "data": {
    "createParent": {
      "parent": {
        "childrenByDadParentId": {
          "edges": [
            {
              "node": {
                "id": "WyJDaGlsZCIsMl0=",
                "name": "child 2",
              },
            },
          ],
        },
        "id": "WyJQYXJlbnQiLDNd",
        "name": "Daddy-O",
      },
    },
  },
}
`;

exports[`a query=forward-create.graphql 1`] = `
{
  "data": {
    "createParent": {
      "parent": {
        "childrenByDadParentId": {
          "nodes": [
            {
              "dadParent": {
                "id": "WyJQYXJlbnQiLDNd",
              },
              "id": "WyJDaGlsZCIsM10=",
              "momParent": null,
              "name": "child 1 of test f1",
            },
          ],
        },
        "childrenByMomParentId": {
          "nodes": [
            {
              "id": "WyJDaGlsZCIsNF0=",
              "momParent": {
                "id": "WyJQYXJlbnQiLDNd",
              },
              "name": "child 2 of test f1",
            },
          ],
        },
        "id": "WyJQYXJlbnQiLDNd",
        "name": "test f1",
      },
    },
  },
}
`;

exports[`a query=reverse-connect-by-id.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDJd",
          "name": "dad",
        },
        "id": "WyJDaGlsZCIsM10=",
        "name": "My baby",
      },
    },
  },
}
`;

exports[`a query=reverse-create.graphql 1`] = `
{
  "data": {
    "createChild": {
      "child": {
        "dadParent": {
          "id": "WyJQYXJlbnQiLDNd",
        },
        "id": "WyJDaGlsZCIsM10=",
        "momParent": null,
        "name": "Me first but what about required constraints",
      },
    },
  },
}
`;

exports[`b query=test.graphql 1`] = `
{
  "data": {
    "createJob": {
      "job": {
        "id": "WyJKb2IiLDFd",
        "jobRelationshipsByFromJobId": {
          "nodes": [],
        },
        "jobRelationshipsByToJobId": {
          "nodes": [
            {
              "fromJobId": null,
              "toJobId": 1,
              "type": "test",
            },
          ],
        },
      },
    },
  },
}
`;
